--- a/scoreboard.css
+++ b/scoreboard.css
@@ -1,12 +1,13 @@
+.page-header {
+  margin-top: 0;
+}
+
 #last-update-info {
   float: right;
 }
 
 .col-rank {
   width: 30px;
-}
-
-.col-name {
 }
 
 .col-school {
