--- a/scoreboard.css
+++ b/scoreboard.css
@@ -1,3 +1,9 @@
+@media (min-width: 768px) and (max-width: 991px) {
+  .container {
+      width: 100%;
+  }
+}
+
 .page-header {
   margin-top: 0;
 }
@@ -13,6 +19,10 @@
 
 .col-rank {
   width: 30px;
+}
+
+.col-username {
+  font-size: 8px;
 }
 
 .col-school {
